Update pdf viewer height

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -113,9 +113,10 @@
                 </a>
                 <iframe id="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_summary.pdf"
-                    width="100%" height="100%" style="border: none;"></iframe>
-
+                    style="height:600px;"></iframe>
             </main>
+
+
 
 
             <script src="../../js/change-theme.js"></script>
