--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -114,6 +114,15 @@
                 <iframe id="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_summary.pdf"
                     style="height:600px;"></iframe>
+
+                <h3>Research Abstract (Part I, 2022/06/27)</h3>
+                <a class="custom-button" href="../../assets/research_abstract.pdf" target="_blank">
+                    Open in new tab
+                    <i class="fas fa-external-link-alt ms-1"></i>
+                </a>
+                <iframe id="pdf-viewer"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_abstract.pdf"
+                    style="height:600px;"></iframe>
             </main>
 
 
