Update pdf viewer

--- a/static/styles.css
+++ b/static/styles.css
@@ -15389,6 +15389,6 @@ body.dark #calculation-log {
     /* this makes sure the game result div always takes up space */
 }
 
-body.dark #pdf-viewer {
+body.dark .pdf-viewer {
     filter: brightness(0.7) !important;
 }
