--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -17,12 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <title>Research - KORIN</title>
-    <style>
-        #pdf-viewer {
-            width: 100%;
-            height: 800px;
-        }
-    </style>
 </head>
 
 <body
@@ -106,32 +100,35 @@
 
             <main class="col-lg">
                 <h2>3D Extrusion Bioprinting</h2>
-                <h3>Research Summary Slides</h3>
+                <h3>Research Summary Slides (2023/06/24)</h3>
                 <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
-                <iframe id="pdf-viewer"
+                <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_summary.pdf"
                     style="height:600px;"></iframe>
+
+                <br>
 
                 <h3>Research Abstract (Part I, 2022/06/27)</h3>
                 <a class="custom-button" href="../../assets/research_abstract.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
                 </a>
-                <iframe id="pdf-viewer"
+                <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_abstract.pdf"
                     style="height:600px;"></iframe>
             </main>
 
+        </div>
+    </div>
 
 
-
-            <script src="../../js/change-theme.js"></script>
-            <script src="../../js/sidebar-toggle.js"></script>
-            <script src="../../js/calendar.js"></script>
-            <script src="../../js/back-to-top-toggle.js"></script>
+    <script src="../../js/change-theme.js"></script>
+    <script src="../../js/sidebar-toggle.js"></script>
+    <script src="../../js/calendar.js"></script>
+    <script src="../../js/back-to-top-toggle.js"></script>
 
 
 </body>
