--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -81,9 +81,9 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../common/projects.html">プロジェクト</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/gallery.html">ギャラリー</a></li>
-                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="../common/research.html">研究</a></li>
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="../common/gallery.html">ギャラリー</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
@@ -139,6 +139,35 @@
                     辞書の著作権は、辞書を作った株式会社三省堂にあります。
                 </p>
 
+                <h2>研究</h2>
+                <p>
+                    3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
+                </p>
+
+                <figure style="text-align: center;">
+                    <p>
+                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350">
+                    </p>
+                    <figcaption><strong>Figure
+                            1.</strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
+                    </figcaption>
+                </figure>
+
+                <h2>オンラインコース修了証明書</h2>
+                <ul>
+                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x: CS50's
+                            Introduction to Computer Science<i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a
+                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
+                            for Machine Learning: Linear Algebra<i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
+                            Github Bootcamp<i class="fas fa-external-link-alt"></i></a></li>
+                </ul>
+
+                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
+
                 <h2>連絡先</h2>
                 <p>以下のPythonスクリプトを実行することで、ASCIIから文字列への変換を利用して私に連絡を取ることができます：</p>
                 <div class="language-plaintext highlighter-rouge">
@@ -155,36 +184,6 @@
                             class="highlight"><code class="command">String.fromCharCode(107, 111, 114, 105, 110, 46, 106, 97, 112, 97, 110, 64, 103, 109, 97, 105, 108, 46, 99, 111, 109);</code></pre>
                     </div>
                 </div>
-
-                <h2>研究</h2>
-                <p>
-                    3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
-                </p>
-
-                <figure style="text-align: center;">
-                    <p>
-                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350">
-                    </p>
-                    <figcaption><strong>Figure
-                            1.</strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
-                    </figcaption>
-                </figure>
-
-                <h2>オンラインコース</h2>
-                <ul>
-                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x: CS50's
-                            Introduction to Computer Science<i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a
-                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
-                            for Machine Learning: Linear Algebra<i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
-                            Github Bootcamp<i class="fas fa-external-link-alt"></i></a></li>
-                </ul>
-
-                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
-                    <i class="fas fa-chevron-up"></i>
-                </a>
-
             </main>
         </div>
     </div>
