--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -139,7 +139,7 @@
                     辞書の著作権は、辞書を作った株式会社三省堂にあります。
                 </p>
 
-                <h2>研究</h2>
+                <h2>研究分野</h2>
                 <p>
                     3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
                 </p>
@@ -149,7 +149,7 @@
                         <img src="../../static/printability_setup.png" alt="printability_setup" width="350">
                     </p>
                     <figcaption><strong>Figure
-                            1.</strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
+                            1. </strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
                     </figcaption>
                 </figure>
 
