Update navbar layout

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -75,11 +75,11 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../../index.html">Homepage</a> / <a href="../ja/index.html">ホームページ</a></li>
+                                href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="research.html">Research</a></li>
+                                href="research.html">⚗️ Research</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="gallery.html">Gallery</a></li>
+                                href="gallery.html">🖼️ Gallery</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
