--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -76,11 +76,11 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../../index.html">Homepage</a> / <a href="../ja/index.html">ホームページ</a></li>
+                                href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="projects.html">Projects</a></li>
+                                href="projects.html">🛠️ Projects</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="gallery.html">Gallery</a></li>
+                                href="gallery.html">🖼️ Gallery</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
@@ -99,8 +99,8 @@
             </aside>
 
             <main class="col-lg">
-                <h2>3D Extrusion Bioprinting</h2>
-                <h3>Research Summary Slides (2023/06/24)</h3>
+                <h2><i class="fa-solid fa-syringe"></i> 3D Extrusion Bioprinting</h2>
+                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Summary Slides (2023/06/24)</h3>
                 <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
@@ -111,7 +111,7 @@
 
                 <br>
 
-                <h3>Research Abstract (Part I, 2022/08/10)</h3>
+                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Abstract (Part I, 2022/08/10)</h3>
                 <a class="custom-button" href="../../assets/research_abstract.pdf" target="_blank">
                     Open in new tab
                     <i class="fas fa-external-link-alt ms-1"></i>
