--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -79,11 +79,11 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/projects.html">プロジェクト</a></li>
+                                href="../common/projects.html">🛠️ プロジェクト</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/research.html">研究</a></li>
+                                href="../common/research.html">⚗️ 研究</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/gallery.html">ギャラリー</a></li>
+                                href="../common/gallery.html">🖼️ ギャラリー</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
@@ -139,7 +139,9 @@
                     辞書の著作権は、辞書を作った株式会社三省堂にあります。
                 </p>
 
-                <h2>研究分野</h2>
+                <h2>研究分野 <a
+                        href="https://ja.wikipedia.org/wiki/3D%E3%83%90%E3%82%A4%E3%82%AA%E3%83%97%E3%83%AA%E3%83%B3%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><i
+                            class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>
                     3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
                 </p>
