--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -76,11 +76,11 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../../index.html">Homepage</a> / <a href="../ja/index.html">ホームページ</a></li>
+                                href="../../index.html">🏠 Home</a> / <a href="../ja/index.html">🗾 ホーム</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="projects.html">Projects</a></li>
+                                href="projects.html">🛠️ Projects</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="research.html">Research</a></li>
+                                href="research.html">⚗️ Research</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
