--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -119,6 +119,10 @@
                 <iframe class="pdf-viewer"
                     src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_abstract.pdf"
                     style="height:600px;"></iframe>
+
+                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
             </main>
 
         </div>
