--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -100,9 +100,34 @@
             </aside>
 
             <main class="col-lg">
+                <h2><i class="fa-solid fa-compass"></i> 旅行 (Traveling)</h2>
+                <figure class="gallery-image figure-container">
+                    <ul class="figure-ul">
+                        <li class="figure-li">
+                            <img src="../../static/gallery/himeji.jpeg" alt="Himeji-jo" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/fukuchiyama-sen.jpeg" alt="Fukuchiyama-sen"
+                                class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/tōjinbō.jpeg" alt="Tōjinbō" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/usj.jpeg" alt="USJ" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/harry-potter-usj.jpeg" alt="USJ-Harry-Potter"
+                                class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/shirarahama.jpeg" alt="shirarahama" class="figure-img">
+                        </li>
+
+                    </ul>
+                </figure>
 
                 <h2><i class="fa-solid fa-mountain"></i> 山登り (Hiking)</h2>
-
                 <figure class="gallery-image figure-container">
                     <ul class="figure-ul">
                         <li class="figure-li">
@@ -111,7 +136,6 @@
                         <li class="figure-li">
                             <img src="../../static/gallery/rokko.jpeg" alt="Mount Rokkō" class="figure-img">
                         </li>
-
 
                     </ul>
                 </figure>
@@ -129,17 +153,17 @@
                     </ul>
                 </figure>
 
-                <h2><i class="fa-solid fa-compass"></i></i> 旅行 (Traveling)</h2>
+                <h2><i class="fa-solid fa-shrimp"></i> 食べ物 (Food)</h2>
                 <figure class="gallery-image figure-container">
                     <ul class="figure-ul">
-                        <li class="figure-li">
-                            <img src="../../static/gallery/himeji.jpeg" alt="himeji-jo" class="figure-img">
-                        </li>
                         <li class="figure-li">
                             <img src="../../static/gallery/wakayama.jpeg" alt="wakayama ramen" class="figure-img">
                         </li>
                         <li class="figure-li">
                             <img src="../../static/gallery/kaisen-don.jpeg" alt="kaisen don" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/misokatsu.jpeg" alt="misokatsu" class="figure-img">
                         </li>
 
                     </ul>
