--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -104,11 +104,11 @@
             <main class="col-lg">
 
                 <h2>私について</h2>
-                <p>大阪大学基礎工学研究科の2年生です。カリフォルニア大学サンタバーバラ校を卒業した後、日本の大学院で夢を追求することを決めました。
+                <p>私は大阪大学の大学院生で、計算流体力学と3Dバイオプリンティングを専門としています。子供の頃から科学と工学に情熱を持っており、カリフォルニア大学サンタバーバラ校で機械工学を学んでいた際に、計算問題に特に興味を持つようになりました。この科学と計算の交差点がプログラミングの学習へと道を開き、計算思考という強力な問題解決手法を含む新たな世界を開くことになりました。
                 </p>
-                <p>現在、OpenFOAMやPythonを使って3Dバイオプリンティングに関する流体せん断応力のシミュレーションを行っています。また、日本語と敬語も勉強しています。
+                <p>Python、C、JavaScript、HTML/CSS、および機械学習のスキルを持つ私は、プログラミングが伝統的な工学分野をどのように革新できるかを見てきました。特に、機械学習とバイオテクノロジーの融合は非常に大きな可能性を秘めていると感じています。日本のMEXT奨学生として、私はこれらの分野をより深く探求する機会を得ており、大阪大学の本館図書館で学部生をサポートしています。
                 </p>
-                <p>私の研究興味は相変化熱伝達、光応答性界面活性剤、計算流体力学、そして3Dバイオプリンティングです。また、現在TypeScript、HTML/CSS、そしてPythonを使った機械学習を学んで練習しています。
+                <p>学問の世界を超えて、私はさまざまな興味を持っています。山登りでは喜びと挑戦を見つけ、旅行に情熱を持っています。旅行は私により広い文化的視野を提供し、世界理解を豊かにします。私は終身学習を固く信じており、頻繁にオンラインコースに参加して知識を広げています。リラックスするためには、よく本に没頭します。それはリラクゼーションと知識の良い源となります。これらの経験を通じて、私は学生、研究者、そして個人として成長し続けています。
                 </p>
                 <p>よろしくお願いします。</p>
 
