Update research heading

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -100,7 +100,8 @@
             </aside>
 
             <main class="col-lg">
-                <h2><i class="fa-solid fa-syringe"></i> 3D Extrusion Bioprinting</h2>
+                <h2><a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i class="fa-brands fa-wikipedia-w"></i></a>
+                    3D Bioprinting (3Dバイオプリンティング)</h2>
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Research Summary Slides (2023/06/24)</h3>
                 <a class="custom-button" href="../../assets/research_summary.pdf" target="_blank">
                     Open in new tab
