Add research poster

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -113,6 +113,17 @@
 
                 <br>
 
+                <h3><i class="fa-solid fa-file-pdf"></i></i> Research Poster (2023/07/06)</h3>
+                <a class="custom-button" href="../../assets/research_poster.pdf" target="_blank">
+                    Open in new tab
+                    <i class="fas fa-external-link-alt ms-1"></i>
+                </a>
+                <iframe class="pdf-viewer"
+                    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://raw.githubusercontent.com/KORINZ/KORINZ.github.io/main/assets/research_poster.pdf"
+                    style="height:600px;"></iframe>
+
+                <br>
+
                 <h3><i class="fa-solid fa-file-pdf"></i></i> Research Abstract (Part I, 2022/08/10)</h3>
                 <a class="custom-button" href="../../assets/research_abstract.pdf" target="_blank">
                     Open in new tab
