--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -158,6 +158,9 @@
 
                 <h2>オンラインコース修了証明書</h2>
                 <ul>
+                    <li><a href="https://cs50.harvard.edu/certificates/dbcc370a-258d-479b-92f3-619ddf181f41">CS50AI:
+                            CS50's Introduction to Artificial Intelligence with Python <i
+                                class="fas fa-external-link-alt"></i></a></li>
                     <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x: CS50's
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a
