--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -158,6 +158,8 @@
 
                 <h2>オンラインコース修了証明書</h2>
                 <ul>
+                    <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3">Computer
+                            Science for Artificial Intelligence <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea">CS50AI:
                             CS50's Introduction to Artificial Intelligence with Python <i
                                 class="fas fa-external-link-alt"></i></a></li>
