Update certificate names

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -161,9 +161,9 @@
                     <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3">Computer
                             Science for Artificial Intelligence <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea">CS50AI:
-                            CS50's Introduction to Artificial Intelligence with Python <i
+                            Introduction to Artificial Intelligence with Python <i
                                 class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x: CS50's
+                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x:
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a
                             href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
