--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Projects - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
                         </li>
                         <li>
                             <a class="mr-1" href="https://twitter.com/japan_korin">
-                                <i aria-hidden="true" class="fab fa-twitter" title="Twitter"></i>
+                                <i aria-hidden="true" class="fa-brands fa-x-twitter" title="X"></i>
                                 Twitter
                             </a>
                         </li>
