--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Research - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="../../static/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
                         </li>
                         <li>
                             <a class="mr-1" href="https://twitter.com/japan_korin">
-                                <i aria-hidden="true" class="fab fa-twitter" title="Twitter"></i>
+                                <i aria-hidden="true" class="fa-brands fa-x-twitter" title="X"></i>
                                 Twitter
                             </a>
                         </li>
