Add scale bar project

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -331,11 +331,14 @@
                         your Strava activity data. You can use it to analyze your running, cycling, swimming, etc.
                         activities.
                     </li>
+                    <li><a href="https://github.com/KORINZ/scale-bar-addition-tool">Scale Bar Addition Tool
+                            <i class="fas fa-external-link-alt"></i></a>: 🔬 This tool allows you to add a scale bar to
+                        microscope images in the .tif format.
                 </ol>
 
                 <br>
 
-                <h2><i class="fa-solid fa-code"></i>
+                <h2><i class=" fa-solid fa-code"></i>
                     Preparing (準備中)
                 </h2>
                 <div class="language-plaintext highlighter-rouge">
