--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -51,8 +51,14 @@
                         </li>
                         <li>
                             <a class="mr-1" href="https://orcid.org/0009-0009-2411-9640">
-                                <i aria-hidden="true" class="fab fa-orcid" title="ORCID"></i></i>
+                                <i aria-hidden="true" class="fab fa-orcid" title="ORCID"></i>
                                 ORCID
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=jp">
+                                <i aria-hidden="true" class="fab fa-google-scholar" title="Google Scholar"></i>
+                                Google Scholar
                             </a>
                         </li>
                         <li>
