chore: Update settings.json and index.html for 2024 publications and Japanese news scraper

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -125,7 +125,25 @@
                 </p>
                 <p>よろしくお願いします。</p>
 
-                <h2>プロジェクト例</h2>
+                <h2>論文</h2>
+                <ol>
+                    <li><b>Colin Zhang</b>, Kelum C. M. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                        (2024).
+                        Machine learning-based prediction and optimization framework for as-extruded cell viability in
+                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, in press.</li>
+                    <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
+                        Experimental and numerical approaches for optimizing conjunction area design to enhance
+                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
+                            Bioprinting</i>, in press.</li>
+
+                    <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. (2024). 3D Bioprinting of Sugar Beet
+                        Pectin
+                        through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
+                        <i>7</i>(5), 3506-3514. <a
+                            href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                </ol>
+
+                <h2>日本語ニュース スクレイピング</h2>
                 <div id="newsBox"
                     style="width: 100%; height: 350px; overflow: auto; border: 1px solid black; padding: 10px;">
                     <h2 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;">NHK NEWS WEB EASY スクレイパー
