Update language status in About Me section

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -119,7 +119,7 @@
                 <h2>私について</h2>
                 <p>私は大阪大学の大学院生で、計算流体力学と3Dバイオプリンティングを専門としています。子供の頃から科学と工学に情熱を持っており、カリフォルニア大学サンタバーバラ校で機械工学を学んでいた際に、計算問題に特に興味を持つようになりました。この科学と計算の交差点がプログラミングの学習へと道を開き、計算思考という強力な問題解決手法を含む新たな世界を開くことになりました。
                 </p>
-                <p>Python、C、JavaScript、HTML/CSS、および機械学習のスキルを持つ私は、プログラミングが伝統的な工学分野をどのように革新できるかを見てきました。特に、機械学習とバイオテクノロジーの融合は非常に大きな可能性を秘めていると感じています。日本のMEXT奨学生として、私はこれらの分野をより深く探求する機会を得ており、大阪大学の本館図書館で学部生をサポートしています。
+                <p>Python、C、JavaScript、HTML/CSS、および機械学習のスキルを持つ私は、プログラミングが伝統的な工学分野をどのように革新できるかを見てきました。特に、機械学習とバイオテクノロジーの融合は非常に大きな可能性を秘めていると感じています。国費留学生として、私はこれらの分野をより深く探求する機会を得ており、大阪大学の本館図書館で学部生をサポートしています。
                 </p>
                 <p>学問の世界を超えて、私はさまざまな興味を持っています。山登りでは喜びと挑戦を見つけ、旅行に情熱を持っています。旅行は私により広い文化的視野を提供し、世界理解を豊かにします。私は終身学習を固く信じており、頻繁にオンラインコースに参加して知識を広げています。リラックスするためには、よく本に没頭します。それはリラクゼーションと知識の良い源となります。これらの経験を通じて、私は学生、研究者、そして個人として成長し続けています。
                 </p>
