--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -117,13 +117,17 @@
             <main class="col-lg">
 
                 <h2>私について</h2>
-                <p>私は大阪大学の大学院生で、計算流体力学と3Dバイオプリンティングを専門としています。子供の頃から科学と工学に情熱を持っており、カリフォルニア大学サンタバーバラ校で機械工学を学んでいた際に、計算問題に特に興味を持つようになりました。この科学と計算の交差点がプログラミングの学習へと道を開き、計算思考という強力な問題解決手法を含む新たな世界を開くことになりました。
+
+                <p>大阪大学の博士課程で計算流体力学と3Dバイオプリンティングを研究しています。幼い頃から科学と工学に魅了され、カリフォルニア大学サンタバーバラ校で機械工学を学ぶ中で計算問題に強い関心を持つようになりました。科学と計算の融合点に立ち、プログラミングを学び始めたことで、計算思考という強力な概念を含む新たな問題解決の世界が開けました。
                 </p>
-                <p>Python、C、JavaScript、HTML/CSS、および機械学習のスキルを持つ私は、プログラミングが伝統的な工学分野をどのように革新できるかを見てきました。特に、機械学習とバイオテクノロジーの融合は非常に大きな可能性を秘めていると感じています。国費留学生として、私はこれらの分野をより深く探求する機会を得ており、大阪大学の本館図書館で学部生をサポートしています。
+
+                <p>Python、C、JavaScript、HTML/CSS、そして機械学習のスキルを身につけるにつれ、プログラミングが従来の工学分野をいかに革新できるかを実感しています。特に、機械学習とバイオテクノロジーの組み合わせには大きな可能性があると考えています。文部科学省の国費留学生として日本に留学し、これらの分野をより深く探求する機会を得ながら、大阪大学附属図書館本館で学部生のサポートも行っています。
                 </p>
-                <p>学問の世界を超えて、私はさまざまな興味を持っています。山登りでは喜びと挑戦を見つけ、旅行に情熱を持っています。旅行は私により広い文化的視野を提供し、世界理解を豊かにします。私は終身学習を固く信じており、頻繁にオンラインコースに参加して知識を広げています。リラックスするためには、よく本に没頭します。それはリラクゼーションと知識の良い源となります。これらの経験を通じて、私は学生、研究者、そして個人として成長し続けています。
+
+                <p>研究以外でも、多様な興味を持っています。山登りに挑戦する喜びを感じ、旅行を通じて幅広い文化的視野と世界への理解を深めています。生涯学習を信念とし、常にオンラインコースで知識を広げています。リラックスするときは良書に没頭し、それが癒しと知恵の源となっています。これらの経験を通じて、学生、研究者、そして一個人として成長を続けています。
                 </p>
-                <p>よろしくお願いします。</p>
+
+                <p>どうぞよろしくお願いいたします。</p>
 
                 <h2>論文</h2>
                 <ol>
@@ -142,6 +146,23 @@
                         <i>7</i>(5), 3506-3514. <a
                             href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
                 </ol>
+
+                <h2>学会</h2>
+                <ol>
+                    <li>
+                        化学工学会第55回秋季大会、北海道大学、2024年9月10日～13日<br>
+                        講演題目：機械学習を用いた押出型3Dバイオプリンティングにおける細胞生存率の予測モデリング <b>[<a
+                                href="https://www.scej.org/news/detail/23235/"> 注目講演 (1130件中の22件)</a>]</b><br>
+                        (学)<b>Zhang Colin</b>・(正)岡野 泰則・(正)境 慎司<br>
+
+                    </li>
+                    <li>化学工学会第53回秋季大会、信州大学、2022年9月14日～16日<br>
+                        講演題目：3D押し出しバイオプリンティングに関する流体せん断応力、印刷効率、細胞生存率に関する数値解析<br>
+                        (学)<b>Zhang Colin</b>・(学)日髙 光將・(正)小嶋 勝・(正)境 慎司・(正)岡野 泰則
+                    </li>
+                </ol>
+
+
 
                 <h2>日本語ニュース スクレイピング</h2>
                 <div id="newsBox"
