--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -134,7 +134,10 @@
                     <li><b>Colin Zhang</b>, Kelum C. M. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
                         Machine learning-based prediction and optimization framework for as-extruded cell viability in
-                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, in press.</li>
+                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
+                        <a
+                            href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                    </li>
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
                         Experimental and numerical approaches for optimizing conjunction area design to enhance
                         switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
@@ -145,6 +148,7 @@
                         through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
                         <i>7</i>(5), 3506-3514. <a
                             href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                    </li>
                 </ol>
 
                 <h2>学会</h2>
