Update author name in publications

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -131,7 +131,7 @@
 
                 <h2>論文</h2>
                 <ol>
-                    <li><b>Colin Zhang</b>, Kelum C. M. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
                         Machine learning-based prediction and optimization framework for as-extruded cell viability in
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
