Update gallery images and categories

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -137,20 +137,9 @@
                         <li class="figure-li">
                             <img src="../../static/gallery/rokko.jpeg" alt="Mount Rokkō" class="figure-img">
                         </li>
-
-                    </ul>
-                </figure>
-
-                <h2><i class="fa-solid fa-fish-fins"></i> 動物 (Animals)</h2>
-                <figure class="gallery-image figure-container">
-                    <ul class="figure-ul">
                         <li class="figure-li">
-                            <img src="../../static/gallery/dolphin.png" alt="dolphin" class="figure-img">
+                            <img src="../../static/gallery/moiwa.jpeg" alt="Mount Moiwa" class="figure-img">
                         </li>
-                        <li class="figure-li">
-                            <img src="../../static/gallery/whale.jpeg" alt="whale" class="figure-img">
-                        </li>
-
                     </ul>
                 </figure>
 
@@ -165,6 +154,27 @@
                         </li>
                         <li class="figure-li">
                             <img src="../../static/gallery/misokatsu.jpeg" alt="misokatsu" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/pancake.jpeg" alt="pancake" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/soup-curry.jpeg" alt="soup-curry" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/ebi-soba.jpeg" alt="ebi-soba" class="figure-img">
+                        </li>
+                    </ul>
+                </figure>
+
+                <h2><i class="fa-solid fa-fish-fins"></i> 動物 (Animals)</h2>
+                <figure class="gallery-image figure-container">
+                    <ul class="figure-ul">
+                        <li class="figure-li">
+                            <img src="../../static/gallery/dolphin.png" alt="dolphin" class="figure-img">
+                        </li>
+                        <li class="figure-li">
+                            <img src="../../static/gallery/whale.jpeg" alt="whale" class="figure-img">
                         </li>
 
                     </ul>
