Update Japanese translation and optimize bioprinting workflow

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -199,15 +199,16 @@
                         href="https://ja.wikipedia.org/wiki/3D%E3%83%90%E3%82%A4%E3%82%AA%E3%83%97%E3%83%AA%E3%83%B3%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>
-                    3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
+                    3D押出式バイオプリンティングは、組織工学の分野で急速に発展しており、複雑で生物学的に構造化されたカスタマイズ可能な構造物を高精度で作製することを可能にしています。このプロセスにおける主な課題は、針の形状や押出パラメータの最適化、および細胞の生存率の維持です。数値解析や機械学習は、流体せん断応力、インクのレオロジー特性、押出速度などの要素を制御するためにますます活用されており、印刷適性の向上と印刷された構造内での細胞の生存率向上を目指しています。これらの計算手法と実験的検証の組み合わせは、組織再生や治療応用に向けた、より効果的なバイオプリンティングソリューションへの道を開くことが期待されています。
                 </p>
 
                 <figure style="text-align: center;">
                     <p>
-                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350">
+                        <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="550">
                     </p>
                     <figcaption><strong>Figure
-                            1. </strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
+                            1. </strong>バイオプリンティング最適化のためのワークフロー:
+                        レオロジー試験で得られたバイオインクの特性を基に、針の押出しプロセスの数値シミュレーションが行われ、その後、ライブ/デッド細胞生存率解析が実施されます。機械学習モデルは、細胞の種類、インクの粘度、押出しパラメータを統合し、細胞生存率を予測・最適化します。
                     </figcaption>
                 </figure>
 
